<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="com.inducesmile.androidmultiquiz.QuizMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/_16sdp"
            android:text="@string/select_quiz"
            android:textColor="@color/icons"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/quiz_instruction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/_16sdp"
            android:text="@string/quiz_instruction"
            android:textColor="@color/icons"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/quiz_score_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/_16sdp"
            android:text="@string/your_best_score"
            android:textColor="@color/icons"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

</LinearLayout>
