<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="com.inducesmile.androidmultiquiz.QuizResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp" />

            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/view_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/view_result"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/button_selector"
            android:textAllCaps="false"
            android:textSize="@dimen/_16sdp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/retake_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/retake_quiz"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/button_selector"
            android:textAllCaps="false"
            android:textSize="@dimen/_16sdp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btnBrowser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_selector"
            android:letterSpacing="0.1"
            android:padding="8dp"
            android:text="@string/website"
            android:textAllCaps="false"
            android:textColor="@color/pink"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
</ScrollView>
